--- a/public/view.html
+++ b/public/view.html
@@ -26,7 +26,7 @@
         $(document).ready(function () {
             var table = $("#myTable");
             $.ajax({
-                url: 'http://localhost:3000/viewData',
+                url: 'https://appads.herokuapp.com/viewData',
                 method: "GET",
                 success: function (data) {
                     // table.empty();
