--- a/public/view.html
+++ b/public/view.html
@@ -21,7 +21,7 @@
     <link rel="Javascript" href="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js">
     <link rel="Javascript" href="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap.min.js">
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             var table = $("#myTable");
