--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
         <!-- <img src="images/signup-bg.jpg" alt=""> -->
         <div class="container">
             <div class="signup-content">
-                <form action="view" method="post" id="signup-form" class="signup-form" enctype="multipart/form-data">
+                <form action="view" method="post" id="signup-form" class="signup-form">
                     <div class="form-group">
                         <label for="app_name">App name</label>
                         <input type="text" class="form-input" name="app_name" id="app_name"/>
